<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/screen"
    tools:context=".privacy">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="5dp"
            android:theme="@style/AppTheme"
            app:title="@string/privacy_policy_title" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="16dp"
            android:text="@string/last_updated"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_1_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_1_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_2_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_2_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_3_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_3_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_4_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_4_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_5_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_5_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_6_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_6_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_7_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_7_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_8_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_8_text" />

        <TextView
            style="@style/PrivacyPolicyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_9_title" />

        <TextView
            style="@style/PrivacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/section_9_text" />


    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
