<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/radius">

    <TextView
        android:id="@+id/tutorial"
        style="@style/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Tutorial"
        android:background="@color/LightGray"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            style="@style/screen1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="UseCompoundDrawables"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/main_page"
                android:src="@drawable/main_page" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/settings_text" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/schedule_text" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/add_schedule_text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/add_shedule_page"
                android:src="@drawable/function_page" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/settings_text1" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/schedule_nametext" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/time_text" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/mode_text" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/location_text" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/days_text" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/okBtn_text" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/add_shedule_page"
                android:src="@drawable/map" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/currentloc_text" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/radius_text" />

            <TextView
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:text="@string/okButton_text" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/close_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/i_understand_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
