<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp"
    style="@style/cardview"
    tools:context=".ContactListActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="0dp"
            style="@style/text"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="14sp"
            style="@style/text"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btndelete"
            android:contentDescription="@string/delete_contact"
            android:background="?attr/selectableItemBackgroundBorderless" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
