<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/cardview"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp"
    android:padding="5dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/idScheduleName"
                style="@style/text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/names"
                android:textSize="20sp"

                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/idInitialTime"
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/initial_time"
                android:textSize="16sp"
                card_view:layout_constraintStart_toEndOf="@+id/idScheduleName"
                card_view:layout_constraintTop_toTopOf="@+id/idScheduleName" />

            <TextView
                android:id="@+id/idFinalTime"
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_time"
                android:textSize="16sp"
                card_view:layout_constraintStart_toStartOf="@+id/idInitialTime"
                card_view:layout_constraintTop_toBottomOf="@+id/idInitialTime"
                />

            <TextView
                android:id="@+id/idMode"
                style="@style/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/mode"
                android:textSize="16sp"
                card_view:layout_constraintStart_toStartOf="@+id/idScheduleName"
                card_view:layout_constraintTop_toBottomOf="@+id/idScheduleName"
                />

            <TextView
                android:id="@+id/idDays"
                style="@style/text2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/days"
                card_view:layout_constraintStart_toStartOf="@+id/idFinalTime"
                card_view:layout_constraintTop_toBottomOf="@+id/idFinalTime">

            </TextView>

            <!-- New Switch Button -->

            <Switch
                android:id="@+id/idSwitch"
                style="@style/CustomSwitch"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <ImageView
                android:id="@+id/deleteIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/delete_schedule"
                style="@style/delete"
                card_view:layout_constraintBottom_toTopOf="@+id/idSwitch"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.13"
                />

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                style="@style/location"
                android:visibility="gone"
                card_view:layout_constraintStart_toEndOf="@+id/idInitialTime"
                card_view:layout_constraintTop_toTopOf="@+id/idInitialTime" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        style="@style/view" />

</androidx.cardview.widget.CardView>
